[tool.poetry]
name = "aoc2023"
version = "0.1.0"
description = ""
authors = ["Nino Annighoefer <nino@ninoan.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12,<3.13"
numpy = "^1.26.2"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
